--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-material": "1.0.0-beta-7",
     "vue-resource": "^1.3.4",
     "vue-router": "^3.0.1",
+    "vuetify": "^0.17.6",
     "yarn": "^1.3.2"
   },
   "devDependencies": {
